--- a/neahtta/package.json
+++ b/neahtta/package.json
@@ -15,5 +15,10 @@
   "dependencies": {
     "bower": "^1.7.9",
     "uglify-js": "^2.4.19"
+  },
+  "devDependencies": {
+    "cypress": "^3.0.2",
+    "eslint": "^5.0.1",
+    "eslint-plugin-cypress": "^2.0.1"
   }
 }
