--- a/neahtta/package.json
+++ b/neahtta/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "postinstall": "bower install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run"
   },
   "author": "",
   "license": "GNU",
