--- a/neahtta/package.json
+++ b/neahtta/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "postinstall": "bower install",
-    "test": "cypress run"
+    "test": "cypress run",
+    "cypress:run": "cypress run"
   },
   "author": "",
   "license": "GNU",
