Document fab itwewina integration_tests

--- a/neahtta/package.json
+++ b/neahtta/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "postinstall": "bower install",
     "test": "cypress run",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open"
   },
   "author": "",
   "license": "GNU",
