--- a/neahtta/requirements_dev.txt
+++ b/neahtta/requirements_dev.txt
@@ -1,4 +1,4 @@
-Babel==1.3
+Babel==2.3.1
 -e git+https://bitbucket.org/rtxanson/babel_yaml.git@b28ab9e4b98136b76091a4a6d02d65ddb3612f21#egg=babel_yaml-master
 caveman==1.0
 cssmin==0.2.0
@@ -9,9 +9,10 @@ Fabric==1.11.1
 Flask==0.10.1
 Flask-Actions==0.6.6
 Flask-Assets==0.10
-Flask-Babel==0.9
+Flask-Babel==0.10
 Flask-Cache==0.13.1
 Flask-Limiter==0.7.9
+Flask-Script==2.0.6
 gunicorn==19.5.0
 itsdangerous==0.24
 jedi==0.8.1-final0
