Change search to use a GET instead of POST. Fixes #8.

--- a/neahtta/configs/language_specific_rules/templates/itwewina/index_search_form.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/index_search_form.template
@@ -27,13 +27,13 @@ Customizations here:
             {# TODO: KeywordSearch this change will need ot be passed up to the
             parent template at some point#}
             <form id="neahttasaanit" class="form-inline"
-                method="post"
+                method="GET"
                 {%- if search_form_action %}
                 action="{{ search_form_action }}"
                 {%- else -%}
                 action="{{ url_for('.canonical_root_search_pair', _from=_from, _to=_to) }}" 
                 {%- endif -%}
-                >
+             >
                 
                 {%- if keyboard %}
                     <div class="input-append input-prepend">
@@ -81,7 +81,7 @@ Customizations here:
                                <button type="submit" class="btn hidden-phone" 
                                        formtarget="_self"
                                        formaction="{{ url_for('.canonical_root_search_pair', _from=_from, _to=_to) }}"
-                                       formmethod="post"
+                                       formmethod="GET"
                                        name="search">
                                    <span lang="{{ current_locale }}">{% trans %}Search{% endtrans %}</span>
                                </button>
@@ -93,7 +93,7 @@ Customizations here:
                    {% if current_pair_settings.show_korp_search %}
                        <button type="submit"
                                formaction="{{ url_for('.external_form_search', _from=_from, _to=_to, _search_type="korp_wordform") }}"
-                               formmethod="post"
+                               formmethod="GET"
                                formtarget="_blank"
                                lang="{{ current_locale }}"
                                class="btn hidden-phone display-tablet korp_search" 
