--- a/neahtta/configs/language_specific_rules/templates/itwewina/about.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/about.template
@@ -5,6 +5,8 @@
 
 {% block title -%}{% trans %}About{% endtrans %} :: {% endblock %}
 
+{# TODO: Add 'Maskwacîs Education Schools Commission' #}
+
 {% block content %}
 <div class="container-fluid">
     <div class="marketing">
@@ -12,6 +14,7 @@
           {# Hide this on mobiles, because it is too big, and the name
              is in the header anyway #}
           <h1 class="hidden-phone">{{ app_name }}</h1>
+           {# TODO: All of this really bothers me: #}
           <p class="lead" style="margin-bottom: .25em;">{% trans %}A dictionary that understands what you're looking for.{% endtrans %}</p>
           <p style="font-size: 80%; margin-top: .5em;"><em>{% trans %}(... And is mobile-friendly!){% endtrans %}</em></p>
         </div>
@@ -91,8 +94,16 @@
             <blockquote></blockquote>
         </div>
         <div class="row-fluid">
-            <span class="span4"><h3 class="red">&nbsp;</h3></span>
-            <span class="span4"><h3 class="blue">{% trans %}More to come...{% endtrans %}</h3></span>
+            <h2 style="font-weight:300;">{% trans %}Acknowledgments{% endtrans %}</h2>
+        </div>
+        <div class="row-fluid">
+            <span class="span4">
+                <h3 style="font-weight:300;">{% trans %}Maskwacîs Education Schools Commission (MESC){% endtrans %}</h3>
+            </span>
+            {# TODO: logo #}
+        </div>
+        <div class="row-fluid">
+            <blockquote></blockquote>
         </div>
         <div class="row-fluid">
             <blockquote></blockquote>
