--- a/neahtta/dicts/Makefile
+++ b/neahtta/dicts/Makefile
@@ -639,11 +639,8 @@ crkeng-cans.xml: crkeng.xml
 	@echo "****************************************"
 	@echo "** Building crk-eng-syllabics lexicon **"
 	@echo "****************************************"
-	@echo "  1.) filter lg/l"
-	cat $^ | python ../tools/filter_xpath.py "./e" "./lg/l" "hfst_lookup" $(GTHOME)/langs/crk/src/orthography/Latn-to-Cans.lookup.hfst > $@.tmp
-	@echo "  2.) filter lg/stem"
-	cat $@.tmp | python ../tools/filter_xpath.py "./e" "./lg/stem" "hfst_lookup" $(GTHOME)/langs/crk/src/orthography/Latn-to-Cans.lookup.hfst > $@
-	rm $@.tmp
+	@echo "  - filter lg/l"
+	cat $^ | python ../tools/filter_xpath.py "./e" "./lg/l" "hfst_lookup" $(GTHOME)/langs/crk/src/orthography/Latn-to-Cans.lookup.hfst > $@
 
 
 crkeng-macron.xml: crkeng.xml
