--- a/neahtta/configs/language_specific_rules/templates/itwewina/crk/entry.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/crk/entry.template
@@ -20,26 +20,14 @@ Customizations made here:
 
 {%- import "lexicon.macros" as macros with context -%}
 
-{%- macro reference_link(has_reference) -%}
-    {{- rendered_templates.entry_text -}} &rarr; <a href="{{ url_for('.detailed_language_pair_search', _from=_from, _to=_to, wordform=has_reference, format='html') }}"><span class="see_also">{{ has_reference }}</span></a>
-{%- endmacro -%}
-
 <div class="row-fluid entry_row">
     <div class="span8 lexeme">
         {% if lexicon_entry|count > 0 %}
-            {% set has_reference = lexicon_entry.xpath('./lg/lemma_ref/text()')|first %}
-            <p>
-              	{%- if has_reference -%}
-              	    {{ reference_link(has_reference) }}
-              	{%- else -%}
-                    <a href="{{- macros.lemma_detail_link(lexicon_entry, _from, _to) -}}">
-                        {{- rendered_templates.entry_text -}}</a>
-                {% endif %}
-
+            <p><a href="{{- macros.lemma_detail_link(lexicon_entry, _from, _to) -}}">
+                {{- rendered_templates.entry_text -}}</a>
             <ul class="meanings">
                 {{- rendered_templates.definition -}}
             </ul>
-
             {{- rendered_templates.audio_links -}}
         {% else %}&nbsp;{% endif %}
     </div>
