Change email to ALTLab. Closes #66.

--- a/neahtta/configs/language_specific_rules/templates/itwewina/about.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/about.template
@@ -79,7 +79,7 @@
 
                 <div class="hidden-phone">
                     <br />
-                    <a class="btn-contact-thing btn btn-large btn-primary" type="button" href="mailto:arppe+itwewina@ualberta.ca">{% trans %}Contact us{% endtrans %}</a>
+                    <a class="btn-contact-thing btn btn-large btn-primary" type="button" href="mailto:altlab+itwewina@ualberta.ca">{% trans %}Contact us{% endtrans %}</a>
                     <br />
                     <br />
                 </div>
