--- a/neahtta/configs/language_specific_rules/templates/itwewina/includes.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/includes.template
@@ -8,7 +8,10 @@ Testing:
  2.) View paradigm and click tabs
 {% endif %}{% endblock %}
 
+
 <script type="text/javascript" src="{{url_for('static', filename='vendor/SoundManager2/script/soundmanager2-jsmin.js')}}"></script>
+{# Includes the endpoint data. #}
+<link rel="x-recording-search-endpoint" href="{{ recordings_endpoint }}">
 <script type="text/javascript" src="{{url_for('static', filename='js/audio_links.js')}}"></script>
 {%- if current_app_config.paradigm_layouts %}
     <script src="{{url_for('static', filename='js/bootstrap-tab.js')}}"></script>
