--- a/neahtta/configs/language_specific_rules/templates/itwewina/crk/definition.template
+++ b/neahtta/configs/language_specific_rules/templates/itwewina/crk/definition.template
@@ -55,4 +55,4 @@ Customizations include:
 
 {% endfor %}
 
-{#  vim: set ts=4 sw=4 tw=72 syntax=htmljinja : #}
+{#  vim: set ts=4 sw=4 tw=72 syntax=jinja : #}
